atualização do estilo

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <div class="container">
         <h1>Encontre seu Pokémon</h1>
         <div class="container2">
-            <label for="poke_text">Informe o nome do seu Pokémon: </label>
-            <input type="text" id="poke_text" placeholder="Digite ele aqui">
-            <button id="pesquisarBtn" onclick= "buscarPokemon()">Pesquisar</button>
+            <div class="container3">
+                <label for="poke_text">Informe o nome do seu Pokémon: </label>
+                <input type="text" id="poke_text" placeholder="Digite ele aqui">
+                <button id="pesquisarBtn" onclick= "buscarPokemon()">Pesquisar</button>
+            </div>
         </div>
         <div class="pokemon-info" id="pokemonInfo"></div>
+        <img src="./imagens/D-pad.png">
     </div>
     <script src="script.js"></script>
 </body>
