ajuste das divs

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
                 <button id="pesquisarBtn" onclick= "buscarPokemon()">Pesquisar</button>
             </div>
         </div>
+        <img class="D-pad" src="./imagens/D-pad.png">
         <div class="pokemon-info" id="pokemonInfo"></div>
-        <img src="./imagens/D-pad.png">
+       
     </div>
     <script src="script.js"></script>
 </body>
